--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <header>
+        <img src="images/Personal Logo  Dark 1.png">
+        <ul>
+            <li>Home</li>
+            <li>Work</li>
+            <li>About</li>
+        </ul>
+        <button class="hireButton">Hire me</button>
+    </header>
 </body>
 </html>
