--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test site</title>
+    <link rel="icon" type="image/x-icon" href="images/Personal Logo  Dark 1.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -12,14 +13,21 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <div class="divider"></div>
     <header>
         <img src="images/Personal Logo  Dark 1.png">
-        <ul>
-            <li>Home</li>
-            <li>Work</li>
-            <li>About</li>
-        </ul>
-        <button class="hireButton">Hire me</button>
+        <div class="links">
+            <ul>
+                <li>Home</li>
+                <li>Work</li>
+                <li>About</li>
+            </ul>
+            <button class="hireButton">Hire me</button>
+        </div>
     </header>
+    <div class="homeButtonDiv">
+        <img src="images/Arrow 2.png">
+        <button class="roundButton"></button>
+    </div>
 </body>
 </html>
