--- a/index.html
+++ b/index.html
@@ -29,5 +29,22 @@
         <img src="images/Arrow 2.png">
         <button class="roundButton"></button>
     </div>
+
+    <div class="heroContainer">
+        <div class="heroLeft">
+            <h1>UI</h1>
+            <h1 class="leftSide">UX</h1>
+            <h2 class="leftSide">design</h2>
+            <p>Creating Impressive Designs that Stand Out and Offer You a Better Chance of Being Chosen by Customers Over Your Competitors.</p>
+        </div>
+    
+        <div class="heroRight">
+            <h1>front</h1>
+            <h1 class="leftSide">end</h1>
+            <h2 class="leftSide">development</h2>
+            <p>Creating Your Websites with HTML, CSS and JavaScript so that They Look Good and Are Ready to be Up and Running in No Time.</p>
+        </div>
+    </div>
+
 </body>
 </html>
