--- a/index.html
+++ b/index.html
@@ -48,5 +48,29 @@
         </div>
     </div>
 
+    <section class="work">
+        <h2>My Work</h2>
+        <div class="workContainer">
+            <div class="workProject">
+                <div class="workImage"></div>
+                <h3>Photography Website</h3>
+                <p>A landing page for a fictional photography company called Dasher, which se...</p>
+                <a class="hyperlink" href="https://youtu.be/dQw4w9WgXcQ">see more</a>
+            </div>
+            <div class="workProject">
+                <div class="workImage"></div>
+                <h3>Photography Website</h3>
+                <p>A landing page for a fictional photography company called Dasher, which se...</p>
+                <a class="hyperlink" href="https://youtu.be/dQw4w9WgXcQ">see more</a>
+            </div>
+            <div class="workProject">
+                <div class="workImage"></div>
+                <h3>Photography Website</h3>
+                <p>A landing page for a fictional photography company called Dasher, which se...</p>
+                <a class="hyperlink" href="https://youtu.be/dQw4w9WgXcQ">see more</a>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
