--- a/index.html
+++ b/index.html
@@ -72,5 +72,13 @@
         </div>
     </section>
 
+    <button class="projectButton">See All Projects</button>
+
+    <section class="about">
+        <h2>About me</h2>
+        <h3>I'M SALMAN SAEED</h3>
+        <p>A Young Aspiring Designer and Frontend Developer Who Loves What He Does and Is Capable of Quality Through Creativity</p>
+        <img src="images/Vector 1.png">
+    </section>
 </body>
 </html>
