--- a/index.html
+++ b/index.html
@@ -77,8 +77,21 @@
     <section class="about">
         <h2>About me</h2>
         <h3>I'M SALMAN SAEED</h3>
-        <p>A Young Aspiring Designer and Frontend Developer Who Loves What He Does and Is Capable of Quality Through Creativity</p>
+        <p class="aboutText">A Young Aspiring Designer and Frontend Developer Who Loves What He Does and Is Capable of Quality Through Creativity</p>
         <img src="images/Vector 1.png">
+        <h3>MY SKILLS</h3>
+        <div class="skillContainer">
+            <div class="skillWebdev">
+                <img src="images/figma.png">
+                <h3>UI & UX Design</h3>
+                <p>Creating Stunning Interfaces with Seamless Experiences that are filled with Creativity and Quality</p>
+            </div>
+            <div class="skillWebdesign">
+                <img src="images/htmlcss.png">
+                <h3>HTML & CSS</h3>
+                <p>I Develop Eyecatching Websites Specially Tailored to Fit Your Needs Effectively with HTML5 and CSS3 that Exceed Standards</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
