--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <img src="images/Personal Logo  Dark 1.png">
         <div class="links">
             <ul>
-                <li>Home</li>
-                <li>Work</li>
-                <li>About</li>
+                <li><a>Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
             <button class="hireButton">Hire me</button>
         </div>
