--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="images/Personal Logo  Dark 1.png">
         <div class="links">
             <ul>
-                <li><a>Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="work.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
