--- a/work.html
+++ b/work.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>work</title>
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
-    
+    <header>
+        <img src="images/Personal Logo  Dark 1.png">
+        <div class="links">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+            <button class="hireButton">Hire me</button>
+        </div>
+    </header>
+    <h1>WORK</h1>
 </body>
 </html>
