--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="divider"></div>
     <header>
-        <img src="images/Personal Logo  Dark 1.png">
+    <a href="https://youtu.be/dQw4w9WgXcQ"><img src="images/Personal Logo  Dark 1.png"></a>
         <div class="links">
             <ul>
                 <li><a href="index.html">Home</a></li>
