page links interactivity

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="work.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
-            <button class="hireButton">Hire me</button>
+            <button class="hireButton" onclick="alert('Page in development.\nsorry for the inconvenience');">Hire me</button>
         </div>
     </header>
     <div class="homeButtonDiv">
